# logs

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.docker/grafana/: Dockerfile  grafana.ini
.docker/pg/: Dockerfile  init.sql
src/: filebeat.py  logger.py  settings.py  wsgi.py
src/core/: flask_api.py  logger.py
src/modules/api/: __init__.py  models.py  urls.py  views.py
